[gd_scene load_steps=4 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/leviathan/sonicwave.png" type="Texture" id=1]
[ext_resource path="res://SonicWave.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 8 )

[node name="SonicWave" type="Area2D"]
z_index = 1
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.68221e-07, -3.8743e-07 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 5.96046e-08, 2.38419e-07 )
scale = Vector2( 0.4, 0.8 )
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
